[gd_scene load_steps=24 format=3 uid="uid://b1pbq5tkfv5ct"]

[ext_resource type="Texture2D" uid="uid://cwfyypixf3g1p" path="res://sprites/effects/pipo-gate01a192.png" id="1_m42ok"]
[ext_resource type="Script" uid="uid://drka6wcitnhkm" path="res://scripts/effect/effect_area.gd" id="1_wtovf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wtovf"]
radius = 60.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kn0rc"]
atlas = ExtResource("1_m42ok")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwlc2"]
atlas = ExtResource("1_m42ok")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hnyv"]
atlas = ExtResource("1_m42ok")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujrou"]
atlas = ExtResource("1_m42ok")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_spcxt"]
atlas = ExtResource("1_m42ok")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3ewy"]
atlas = ExtResource("1_m42ok")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_puv7t"]
atlas = ExtResource("1_m42ok")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ul5"]
atlas = ExtResource("1_m42ok")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq0xk"]
atlas = ExtResource("1_m42ok")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ay5p"]
atlas = ExtResource("1_m42ok")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6251k"]
atlas = ExtResource("1_m42ok")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieu8p"]
atlas = ExtResource("1_m42ok")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2qda"]
atlas = ExtResource("1_m42ok")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_20fw5"]
atlas = ExtResource("1_m42ok")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o30om"]
atlas = ExtResource("1_m42ok")
region = Rect2(768, 384, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ywyv5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn0rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwlc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hnyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujrou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spcxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3ewy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puv7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ul5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq0xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ay5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6251k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieu8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2qda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20fw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o30om")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_rda0j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_4lg85"]
resource_name = "grow"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_m42ok"]
resource_name = "shrink"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qigtc"]
_data = {
&"RESET": SubResource("Animation_rda0j"),
&"grow": SubResource("Animation_4lg85"),
&"shrink": SubResource("Animation_m42ok")
}

[node name="EffectArea" type="Area2D"]
z_index = 30
collision_layer = 0
collision_mask = 126
script = ExtResource("1_wtovf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CircleShape2D_wtovf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.235294)
scale = Vector2(1e-05, 1e-05)
sprite_frames = SubResource("SpriteFrames_ywyv5")
autoplay = "default"
frame_progress = 0.487764

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qigtc")
}
autoplay = "grow"

[node name="LastingTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AnimationWaitingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LastingTimer" to="." method="_on_lasting_timer_timeout"]
[connection signal="timeout" from="AnimationWaitingTimer" to="." method="_on_animation_waiting_timer_timeout"]
